--- a/app/Resources/views/user/itemUsers.html.twig
+++ b/app/Resources/views/user/itemUsers.html.twig
@@ -484,7 +484,7 @@
             }
 
             $('.loadNonInscrits').remove();
-            let step = 50;
+            let step = 100;
             loadUsersSequence(step+1);
             function loadUsersSequence(min){
                 $.ajax({
@@ -525,6 +525,7 @@
                                 .trigger('addRows', [$row, true]);
                         }
                         updatebtnbehaviors();
+                        console.log(response['usersHavingAccess'].length+' ; '+response['usersNoHavingAccess'].length)
                         if(response['usersHavingAccess'].length !== 0 || response['usersNoHavingAccess'].length !== 0){
                             loadUsersSequence(min + step + 1);
                         }
