évolution calendrier, Référent, droits particuliers

--- a/app/Resources/views/user/itemUsers.html.twig
+++ b/app/Resources/views/user/itemUsers.html.twig
@@ -145,7 +145,8 @@
                     widgets: ['zebra', 'filter', 'output'],
                     widgetOptions: {
                         output_delivery: 'd',
-                        output_saveFileName: 'mytable.csv'
+                        output_saveFileName: 'mytable.csv',
+                        zebra : [ "even", "odd" ]
                     }
                 })
                 .tablesorterPager({
