Devoir : pas obligé d'avoir un sujet

--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -108,8 +108,9 @@
 
                             // On ajoute les liens vers les fichiers de sujets
                             $('.listeDevoirSujets').append(myBtn.closest('.conteneurLiensSujets').find('.listeSujets'));
-                            $('.listeDevoirSujets .listeSujets *').removeClass('hidden')
-                            if(!$('.listeDevoirSujets .listeSujets *').length){
+                            $('.listeDevoirSujets .listeSujets *').removeClass('hidden');
+                            console.log($('.listeDevoirSujets .listeSujets').is(':empty'))
+                            if($('.listeDevoirSujets .listeSujets').is(':empty')){
                                 $('.listeDevoirSujets').hide();
                             }
 
