Devoir : pas obligé d'avoir un sujet

--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -223,7 +223,7 @@
                                         },
                                         success: function (data) {
                                             $('.modal').modal('toggle');
-                                            window.location.href = window.location.href.replace(/[\?#].*|$/, "?idSection=" + idSection);
+                                            //window.location.href = window.location.href.replace(/[\?#].*|$/, "?idSection=" + idSection);
                                         },
                                         error: function (xhr, status, error) {
                                             $('.modal').modal('toggle');
