--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -538,10 +538,10 @@
                                                                 et si une copie n'a pas encore été déposée
                                                                 et si on a pas dépassé le temps alloué -->
                                                                 {% set duree = '+' ~ valR.duree ~ 'seconds' %}
-                                                                {% if (val.zones.copieFichier[keyR] == "undefined" or duree == 0)
+                                                                {% if val.zones.copieFichier[keyR] == "undefined"
                                                                     and  "now"|date('Ymd H:i:s') < valR.dateFin|date('Ymd H:i:s')
                                                                     and  "now"|date('Ymd H:i:s') > valR.dateDebut|date('Ymd H:i:s') %}
-                                                                    {% if val.zones.copie[keyR] == "undefined" or "now"|date('Ymd H:i:s') < val.zones.copie[keyR].dateCreation|date_modify(duree)|date('Ymd H:i:s') %}
+                                                                    {% if val.zones.copie[keyR] == "undefined" or "now"|date('Ymd H:i:s') < val.zones.copie[keyR].dateCreation|date_modify(duree)|date('Ymd H:i:s') or duree == 0 %}
                                                                         <div class="col-xs-3 text-right conteneurLiensSujets">
                                                                             <div class="btn btn-sm btn-info btnOpenDevoir">
                                                                                 Entrer
