--- a/app/Resources/views/user/itemUsers.html.twig
+++ b/app/Resources/views/user/itemUsers.html.twig
@@ -27,7 +27,6 @@
 {% endblock %}
 
 {% block main %}
-    <script src="{{ asset('vendors/jquery-ui/jquery-ui.min.js') }}" type=text/javascript></script>
     <link rel="stylesheet" href="{{ asset('vendors/tablesorter/dist/css/theme.default.min.css') }}"/>
     <link rel="stylesheet" href="{{ asset('vendors/tablesorter/dist/css/jquery.tablesorter.pager.min.css') }}"/>
 
@@ -183,7 +182,8 @@
                 .tablesorterPager({
                     container: $("#pagerYes"),
                     output: 'de {startRow} à {endRow} sur {totalRows} lignes',
-                    size: 10
+                    size: 10,
+                    removeRows: false
                 });
             $(".tablesorter.tableNo")
                 .tablesorter({
@@ -197,7 +197,8 @@
                 .tablesorterPager({
                     container: $("#pagerNo"),
                     output: 'de {startRow} à {endRow} sur {totalRows} lignes',
-                    size: 10
+                    size: 10,
+                    removeRows: false
                 });
             $(".tablesorter.tableRess")
                 .tablesorter({
@@ -281,42 +282,6 @@
                 }
             });
 
-            $(".sortableList").each(function () {
-                const sectionId = $(this).attr('data-sectionId');
-                $(this).sortable({
-                    placeholder: "ui-state-highlight",
-                    connectWith: ".sortableList[data-sectionId=" + sectionId + "]",
-                    receive: function (event, ui) {
-                        var sectionId = $(this).closest('.sectionManager').attr('data-sectionId');
-                        if ($(this).hasClass('sectionInscrits')) {
-                            $.ajax({
-                                type: "POST",
-                                url: "{{ path('sectionAutorizeUsers_ajax') }}",
-                                data: {
-                                    id: sectionId,
-                                    users: [ui.item.attr('data-userid')]
-                                },
-                                dataType: "json",
-                                success: function (response) {
-                                }
-                            });
-                        } else {
-                            $.ajax({
-                                type: "POST",
-                                url: "{{ path('sectionUnAutorizeUsers_ajax') }}",
-                                data: {
-                                    id: sectionId,
-                                    users: [ui.item.attr('data-userid')]
-                                },
-                                dataType: "json",
-                                success: function (response) {
-                                }
-                            });
-                        }
-                    }
-                }).disableSelection();
-            });
-
             //cache les utilisateurs des sections dont l'accès n'est pas filtré
             $('.sectionManagerChecker').each(function () {
                 if (!$(this).is(":checked")) {
@@ -364,7 +329,6 @@
                             $(this).closest('.userSectionLi').appendTo(sectionManager.find('.sectionInscrits'));
                             $(this).prop("checked", false);
                         });
-                        $(".sortableList").sortable("refresh");
                     }
                 });
             });
@@ -388,7 +352,6 @@
                             $(this).closest('.userSectionLi').appendTo(sectionManager.find('.sectionNonInscrits'));
                             $(this).prop("checked", false);
                         });
-                        $(".sortableList").sortable("refresh");
                     }
                 });
             });
@@ -432,6 +395,7 @@
                     $('.loadNonIncrits').remove();
                     loadBtnInscrEvent();
                     $('#pagerNo').show();
+                    $('.tableNo').trigger('update');
                 }, 600);
             });
             $('.loadIncrits').click(function () {
@@ -460,6 +424,7 @@
                     $('.loadIncrits').remove();
                     loadBtnDesinscrEvent();
                     $('#pagerYes').show();
+                    $('.tableYes').trigger('update');
                 }, 600);
             });
 
@@ -706,6 +671,13 @@
                                             <ul class="sortableList sectionNonInscrits"
                                                 data-sectionId="{{ sectionId }}">
                                                 {% for user in usersHavingAccess if user.user.id not in autorizedIds %}
+                                                    <li class="userSectionLi" data-userId="{{ user.user.id }}"><input
+                                                                class="sectionUserSelector"
+                                                                type="checkbox"/> {{ user.user.firstname }} {{ user.user.lastname }}
+                                                        ({{ user.user.email }})
+                                                    </li>
+                                                {% endfor %}
+                                                {% for user in usersHavingAccessTampon if user.user.id not in autorizedIds %}
                                                     <li class="userSectionLi" data-userId="{{ user.user.id }}"><input
                                                                 class="sectionUserSelector"
                                                                 type="checkbox"/> {{ user.user.firstname }} {{ user.user.lastname }}
